# temporal-test

./: Dockerfile  Makefile  README.md  deployment-2.yml  deployment.yml  docker-secret.sh  kaniko.yaml  pyproject.toml  urls.txt
helm/: docker_pull.sh  docker_push.sh  image_names.txt  temporal.yaml  urls.txt
operator/: postgres.yaml  temporal-cluster.yaml  temporal-operator.yaml
temporal_test/: activity.py  config.py  submit.py  worker.py  workflows.py
