[tool.poetry]
name = "temporal-test"
version = "0.1.0"
description = ""
authors = ["Adi Ludmer <Adi.Ludmer@qedma.com>"]
readme = "README.md"

[tool.poetry.scripts]
worker = 'temporal_test.worker:main'

[tool.poetry.dependencies]
python = "^3.10"
temporalio = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
